One of four line functions works :)

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -92,7 +92,7 @@ by two players. Entirely drawn with points.
     
     <body>
         <canvas id = "gl-canvas" width = "1000" height = "1000">
-            Oopsy... Your browser doesn't support html5's canvas elements.
+            Oops... Your browser doesn't support html5's canvas elements.
         </canvas>
     </body>
 </html>
