One-eighth of circle complete; Now to calculate symmetrical points based off of this

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -33,6 +33,7 @@ by two players. Entirely drawn with points.
     <script type = "text/javascript" src = "webgl-utils.js"></script>
     <script type = "text/javascript" src = "gameBoard.js"></script>
     <script type = "text/javascript" src = "XPiece.js"></script>
+    <script type = "text/javascript" src = "OPiece.js"></script>
 
     <script type = "text/javascript">
         var canvas;
@@ -69,11 +70,12 @@ by two players. Entirely drawn with points.
 
             //Actual drawing
             gl.uniform4f(colorUniformLocation, 1.0, 1.0, 1.0, 1.0);
-            gl.drawArrays(gl.POINTS, 0, gameBoardVertices.length/2);
-
+            //gl.drawArrays(gl.POINTS, 0, gameBoardVertices.length/2);
+            
+            /*
             //TODO: Remove later; this is just to test before trying inputs
             //Drawing a line for the X Piece
-            var lineVertices = returnXPieceVertices(-800, 167, -267, 500); //Drawing in top left square?
+            //var lineVertices = returnXPieceVertices(-800, 167, -267, 500); //Drawing in top left square?
 
             for (i=0; i < lineVertices.length; i++) {
                 lineVertices[i] = lineVertices[i]/1000.0;
@@ -84,6 +86,18 @@ by two players. Entirely drawn with points.
             gl.drawArrays(gl.POINTS, 0, lineVertices.length/2);
 
             console.log(lineVertices);
+            */
+
+            //var OPiece = returnSymmetricPointsOnCircle(191, 982, 0, 0); //0.191, 0.982
+            var OPiece = returnOPieceVertices(0, 0, 500);
+            
+            for (i=0; i < OPiece.length; i++) {
+                OPiece[i] = OPiece[i]/1000.0;
+            }
+
+            gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(OPiece), gl.STATIC_DRAW);
+            gl.uniform4f(colorUniformLocation, 0.0, 1.0, 1.0, 1.0);
+            gl.drawArrays(gl.POINTS, 0, OPiece.length/2);
         }
 
 
