We have a quarter circle; Symmetric Points are implemented

--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -90,6 +90,8 @@ by two players. Entirely drawn with points.
 
             //var OPiece = returnSymmetricPointsOnCircle(191, 982, 0, 0); //0.191, 0.982
             var OPiece = returnOPieceVertices(0, 0, 500);
+
+            //console.log(OPiece);
             
             for (i=0; i < OPiece.length; i++) {
                 OPiece[i] = OPiece[i]/1000.0;
